compiler/tools/fpp-to-dict/test/top/missingUserDataSizeConstant.ref.txt
fpp-to-dict
[ local path prefix ]/tools/fpp-to-dict/test/top/missingUserDataSizeConstant.fpp:26.1
topology T {
^
error: symbol CONTAINER_USER_DATA_SIZE is not defined
note: looking for a constant here
note: the symbol Fw.DpCfg.CONTAINER_USER_DATA_SIZE has an implied use at the point of the error
note: this implied use occurs when constructing a dictionary
